fix nav and footer as well as some bootstrap layout bugs

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -72,11 +72,9 @@ nav {
 }
 
 .navbar {
-	/* z-index: 999; */
-	/* position: absolute; */
+	padding: 0;
   width: 100%;
   left: 0;
-	/* height: 40px; */
 	background-color: rgba(73, 73, 73, 1);
 	color: white;
 	font-size: 10pt;
@@ -84,6 +82,19 @@ nav {
   line-height: 40px;
   text-transform: uppercase;
   letter-spacing: 5px;
+}
+
+.navbar > div {
+	max-width: 1200px;
+}
+
+.navbar-toggler-icon {
+	color:  white;
+	height: 100%;
+}
+
+a.nav-item {
+	width: 100%;
 }
 
 .navbar a {
@@ -130,10 +141,6 @@ nav {
 .navbar a:hover:before, .nav-bar a:focus:before, .nav-bar a:active:before {
   -webkit-transform: scaleY(1);
   transform: scaleY(1);
-}
-
-#end {
-	border-right: solid 1px rgba(255, 255, 255, 0.15);
 }
 
 .nav-float {
@@ -191,7 +198,7 @@ nav {
 .footer-container {
 	height: 100%;
 	margin: 0 auto;
-	display: block;
+	display: flex;
 	align-items: center;
 }
 
@@ -200,11 +207,12 @@ nav {
 	filter: invert(100%);
 	-webkit-filter: invert(100%);
 	padding-left: 0;
+	display: flex;
 }
 
 #social li {
 	display: inline-block !important; 
-	width: 9%;
+	flex-grow: 1;
 }
 
 .soc-icon {
@@ -214,10 +222,6 @@ nav {
 @media (min-width: 992px) {
 	.soc-icon {
 		width: 40px;
-	}
-	#social li {
-		display: inline-block !important; 
-		width: 13%;
 	}
 }
 
